# HMI

./: .clang-format  .gitignore  clean  compile  demoRMR.pro  map.txt  priestor.txt  run
FEIStyle/: FEIstyle.cls  README.md  example.tex  example_URK.tex  example_paper.tex
FEIStyle/includes/: bibliography.bib  conclusion.tex  core.tex  introduction.tex
QJoysticks-master/: QJoysticks.pri
QJoysticks-master/examples/joystickApp/: joystickApp.pro  mainwindow.cpp  mainwindow.h
QJoysticks-master/lib/SDL/include/: SDL.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config_windows.h  SDL_egl.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_keycode.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles2_gl2.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_render.h  SDL_scancode.h  SDL_system.h  SDL_syswm.h  SDL_test.h  SDL_thread.h  SDL_version.h  begin_code.h  close_code.h
QJoysticks-master/src/: QJoysticks.h
QJoysticks-master/src/QJoysticks/: JoysticksCommon.h  VirtualJoystick.cpp
QJoysticks-master/tests/: main.cpp
demoRMR/: BodyProgressBars.cpp  BodyProgressBars.h  CMakeLists.txt  ControllButtons.cpp  ControllButtons.h  FloodPlanner.cpp  FloodPlanner.h  HelpWindow.cpp  HelpWindow.h  HelpWindow.ui  MapLoader.cpp  MapLoader.h  PidController.cpp  PidController.h  PositionTracker.cpp  PositionTracker.h  README.md  RobotTrajectoryController.cpp  RobotTrajectoryController.h  demoRMR.pro  demoRMR.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_detection.cpp  object_detection.h  priestor.txt  stylesheeteditor.cpp  stylesheeteditor.h
demoRMR/QJoysticks-master/: CMakeLists.txt
demoRMR/QJoysticks-master/examples/JoystickList/: main.cpp
demoRMR/QJoysticks-master/lib/SDL/include/: SDL_assert.h  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_psp.h  SDL_config_winrt.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_loadso.h  SDL_mouse.h  SDL_mutex.h  SDL_opengles2_gl2ext.h  SDL_opengles2_khrplatform.h  SDL_quit.h  SDL_rect.h  SDL_rwops.h  SDL_shape.h  SDL_stdinc.h  SDL_surface.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_crc32.h  SDL_test_font.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_images.h  SDL_test_md5.h  SDL_test_random.h  SDL_timer.h  SDL_touch.h  SDL_video.h
demoRMR/QJoysticks-master/src/: QJoysticks.cpp
demoRMR/QJoysticks-master/src/QJoysticks/: Android_Joystick.h  SDL_Joysticks.cpp  SDL_Joysticks.h  VirtualJoystick.h
demoRMR/QJoysticks-master/tests/: Test_QJoysticks.h
demoRMR/QLed/: CMakeLists.txt  QLed.cpp  QLed.h
demoRMR/md/: help.md
demoRMR/qss/: coffee.qss  default.qss  mocha.qss
demoRMR/robot/: CKobuki.cpp  CKobuki.h  CMakeLists.txt  robot.cpp  robot.h  robot_global.h  rplidar.h  szevent.h
handin/: README.md
handin/demoRMR/: ControllButtons.cpp  HelpWindow.cpp  HelpWindow.h  demoRMR.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stylesheeteditor.cpp  stylesheeteditor.ui
handin/demoRMR/md/: help.md
handin/demoRMR/qss/: coffee.qss
handin/demoRMR/robot/: CMakeLists.txt  rplidar.h
robot/: CKobuki.cpp  CKobuki.h  robot.cpp  robot.h  robot.pro  robot_global.h  rplidar.cpp  rplidar.h  szevent.h
skeleton/: main.py  udp_server.py
